Implemented blending curve and toggling of curves
Implemented and tested blending curve.

Added functionality to toggle between different simulations.

--- a/SpecialEffects/CMakeLists.txt
+++ b/SpecialEffects/CMakeLists.txt
@@ -115,9 +115,10 @@ set( HDRS
   application/utils.h
 
   downeyeffects/bsplinecurve.h
+  downeyeffects/blendingcurve.h
 
   scenario.h
-  mybsplinecurve.h
+  defaultsplinecurve.h
   )
 
 set( SRCS
@@ -137,9 +138,8 @@ set( SRCS
   application/window.cpp
   application/main.cpp
 
-
   scenario.cpp
-  mybsplinecurve.cpp
+  defaultsplinecurve.cpp
   )
 
 #########
