Added and tested GERBS & model curves
Implemented all that is needed for butterfly model curve. It does not
inclubde derivatives, but they are not important.

Added rest of functionality to paint the GERBS curve on screen with
blended subcruves.

Added colour animation to the GERBS curve. Need to work on animating it.

--- a/SpecialEffects/CMakeLists.txt
+++ b/SpecialEffects/CMakeLists.txt
@@ -116,6 +116,7 @@ set( HDRS
 
   downeyeffects/blendingcurve.h
   downeyeffects/bsplinecurve.h
+  downeyeffects/modelcurve.h
   downeyeffects/gerbs.h
 
   defaultsplinecurve.h
