Added simplesubsurf, working on GERBSurface, fixes
Renamed GERBSCurve source files to avoid ambiguity between GERBSSurface.

Cleaned up modelcurve.h

Added SimpleSubSurface based on file by Arne.

Started work on GERBSSurface.

Fixed animation error in GERBSCurve.

Made simulation objects bigger and nicer in scenario.h, setup code for
visualizing GERBSSurface and it's modelsurface in scenario.

--- a/SpecialEffects/CMakeLists.txt
+++ b/SpecialEffects/CMakeLists.txt
@@ -115,9 +115,11 @@ set( HDRS
   application/utils.h
 
   downeyeffects/blendingcurve.h
+  downeyeffects/simplesubsurf.h
   downeyeffects/bsplinecurve.h
+  downeyeffects/gerbscurve.h
   downeyeffects/modelcurve.h
-  downeyeffects/gerbs.h
+  downeyeffects/gerbssurf.h
 
   defaultsplinecurve.h
   scenario.h
